feat:added type for <input> -> type="text"

--- a/form.html
+++ b/form.html
@@ -8,9 +8,9 @@
 <body>
 	<form action="/submit" method="POST"> 
 		<label>Name:</label>
-		<input name="name">
+		<input type="text" name="name">
 		<label>Month:</label>
-		<input name="month">
+		<input type="text" name="month">
 		<button type="submit">Submit</button>
 	</form>	
 </body>
